foundations 2 methods design

--- a/book/design/foundations/foundation_methods_2.ipynb
+++ b/book/design/foundations/foundation_methods_2.ipynb
@@ -4,7 +4,318 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Foundation methos 2, pile foundations"
+    "# Foundation methods 2, pile foundations\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "```{figure} Images/fm2_pile.png\n",
+    "---\n",
+    "align: rights\n",
+    "---\n",
+    "```\n",
+    "There are several criteria which need to be kept in mind when choosing a pile type:\n",
+    "- the degree to which the surroundings are influenced by vibrations and noise\n",
+    "- the degree to which the installation of the pile leads to soil deformations\n",
+    "- the value of the foundation load and the type of loading (compression, tension, bending, static or dynamic) \n",
+    "- demands on force-displacement behaviour\n",
+    "- durability\n",
+    "- difficulties during execution\n",
+    "- costs\n",
+    "\n",
+    "Each criterion has to be judged for each case separately. Execution aspects and difficulties are especially important. For example: a very weak soil can lack the strength to support the freshly casted concrete of a cast\u0002in-place concrete pile (e.g. a vibro\u0002pile). Another example: a wood pile cannot be driven 5 m into a sand layer without breaking. In the scheme on page fm4 the different pile types are sorted according to their application areas.\n",
+    "\n",
+    "In general, driven piles lead to vibrations and noise in the direct surroundings. Therefore the first selection is usually based on the question whether pile driving is acceptable. This is important because driven foundations have important benefits over non-driven alternatives. For example:\n",
+    "- driven systems can be calendered, which makes it possible to verify the assumed soil conditions during driving.\n",
+    "- When driving a pile, it pushes aside the soil, thereby increasing strength and stiffness of the soil. The force-displacement behaviour is relatively stiff.\n",
+    "- The pile shaft is relatively insensitive to the presence or absence of lateral soil pressure and groundwater flow.\n",
+    "\n",
+    "## Considerations\n",
+    "\n",
+    "### Vibrations\n",
+    "Pile driving can cause nuisance due to vibrations and even lead to damage to adjacent buildings. This damage is caused by the reduced strength of the soil beneath the adjacent building, induced by the deformation of this soil caused by the vibrations. Pile driving at a distance of 2 m does usually not give problems, but can cause nuisance (e.g. cracks in plasterwork). If there is a possibility of vibrations, deformation of the soil due to vibrations or compaction due to vibrations, vibration-free pile systems \n",
+    "can be used. These contain several screwed systems and drilled piles. By means of an isolation sheet, a sound reduction of 5 dB(A) is possible.\n",
+    "\n",
+    "### Influence on surroundings\n",
+    "While driving displacement piles, a temporary situation of perched water can occur which can lower the bearing capacity of adjacent foundations. Outside a circle with a radius of 8D (D= pile diameter) this effect is small. All screwed piles lead to a locally lower groundwater pressure. This relaxation can affect an area with a radius of about 4D to 6D. To keep the bearing capacity of existing piles intact, the cylinder of influence around the existing piles (about 2D) must remain undisturbed.\n",
+    "\n",
+    "### Pile length & transport\n",
+    "All driven piles have a maximum length, dictated by the driving equipment. A typical maximum length is about 40 m, of which 5 m is reserved for the driving ram. The maximum therefore is about 35 m. For prefab piles, another limitation is the slenderness of the piles. This affects transport and drivability of the piles. A a rule of thumb: the slenderness of a pile (length/diameter) may not exceed 80. In urban areas, where access roads may be narrow, an additional limit to pile length may exist. This can reduce the maximum pile length to about 25 m.\n",
+    "\n",
+    "## Foundation tree\n",
+    "\n",
+    "```{figure} Images/foundation_tree.png\n",
+    "---\n",
+    "---\n",
+    "Foundation tree\n",
+    "```\n",
+    "\n",
+    "## Prefab concrete piles\n",
+    "```{figure} Images/prefab_concrete_piles.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "Prefab concrete piles\n",
+    "```\n",
+    "```{admonition} Information\n",
+    "Length: 2 - 32 m  \n",
+    "Tip diameter: 150 - 500 mm  \n",
+    "$F_{s;d}$: 400 - 3000 kN\n",
+    "```\n",
+    "### Explanation\n",
+    "In practice for prefab piles shaft stress of no higher than 12 N/mm2 is chosen. This means that the maximum bearing capacity of a pile with a width of 450 mm at most is 2500 kN. Note that the soil conditions always determine the bearing capacity.\n",
+    "\n",
+    "For standard foundations concrete of strength class C45/55 is used for piles 180 to 320. Prestress of 4 N/mm2 is commonly used. For heavy driving, for example in a 15 m sand layer, higher strength concrete can be used. Also the prestress is increased. Vibrations due to pile driving can lead to minor or major damage to adjacent buildings.\n",
+    "\n",
+    "### Features\n",
+    "- only smooth square shaft\n",
+    "- design value of shaft bearing stress in practice no more than 12 N/mm2\n",
+    "- concrete strength class: C25/30 to C50/60 with a prestress of 0 to 7 N/mm2\n",
+    "- after driving the piles are broken at the head to enable the reinforcement of the pile to be connected to the structure.\n",
+    "- piles are driven one by one\n",
+    "- maximum angle approx. 1:3\n",
+    "- age during driving >1 month \n",
+    "- delivery time 2 months\n",
+    "- common failures: broken pile or pile head\n",
+    "\n",
+    "### Application area\n",
+    "- high strength for both compression and tension\n",
+    "- a lot of nuisance due to vibrations and noise\n",
+    "- capable of handling large bending moments\n",
+    "- stiff force-deformation behaviour\n",
+    "- drivable to great depths (15 m) in compact sand (cone resistance 25 MPa)\n",
+    "\n",
+    "## Wood piles\n",
+    "```{admonition} Information\n",
+    "Length: 5 - 15 m  (or 7 - 20 m with concrete lengthening piece)  \n",
+    "Tip diameter: 90 - 160 mm  \n",
+    "$F_{s;d}$: 150 kN\n",
+    "```\n",
+    "### Explanation\n",
+    "Wood piles are still very useful, provided that the pile heads are driven at least 0,5 m beneath the lowest possible groudwater table. Concrete lengthening pieces can be used to bridge the groundwater zone. Despite the possibilities, wood piles are not used frequently. The characteristic wood stress is mostly assumed to be 7 N/mm2. In practice the bearing capacity of wood piles is limited to 130 kN. Wood piles gain their strength trough both tip resistance and friction.\n",
+    "\n",
+    "### Features\n",
+    "- for foundations only round piles are used\n",
+    "- whole pile must be driven at least 0,5 m beneath ground water table\n",
+    "- ground water zone is bridged with concrete lenghtening pieces\n",
+    "- taper of approximately 7,5 mm/m can be driven with a pile driver of 600 to 1200 kg. \n",
+    "\n",
+    "### Application area\n",
+    "- a lot of vibrations\n",
+    "- stiff load-displacement behaviour\n",
+    "- no tensile capacity\n",
+    "- low bearing capacity\n",
+    "- very flexible\n",
+    "- pile lenght easy adjustable\n",
+    "- cheap\n",
+    "- only light equipment necessary\n",
+    "\n",
+    "## Steel tube piles\n",
+    "\n",
+    "```{figure} Images/CHS.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "CHS\n",
+    "```\n",
+    "```{admonition} Information\n",
+    "Length: variable  \n",
+    "Tip diameter: 114 - 813 mm  \n",
+    "$F_{s;d}$: up to 5000 kN\n",
+    "```\n",
+    "### Explanation\n",
+    "Suitable for application in areas with limited working height or space. Is able to resist large bending moments, also in soil retaining structures. Can be used in combination with sheet piles.\n",
+    "\n",
+    "### Features\n",
+    "- a steel tube, either with or without footing plate is driven into the soil\n",
+    "- tubular segments can be welded to eachother on site, making this technique suitable in confined spaces\n",
+    "- the tube is provided with reinforcement and filled with concrete. (this also gives corrosion protection)\n",
+    "- besides the mentioned commercial sizes, special ordered (larger) dimensions are possible\n",
+    "\n",
+    "### Application area\n",
+    "- very large bearing capacity\n",
+    "- able to take up large bending moments\n",
+    "- can sustain heavy driving\n",
+    "- suitable as tensile pile\n",
+    "- suitable in confined spaces\n",
+    "\n",
+    "## Steel profiles (I, H and Z-profiles)\n",
+    "\n",
+    "```{figure} Images/steel_profiles.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "Steel profiles (I, H and Z-profiles)\n",
+    "```\n",
+    "```{admonition} Information\n",
+    "Length: variable  \n",
+    "Tip diameter: variable  \n",
+    "$F_{s;d}$: variable\n",
+    "```\n",
+    "### Explanation\n",
+    "Designed as walls to resist horizontal forces in for example building pits and soil retaining structures. Can also be explanation used to resist vertical forces.\n",
+    "\n",
+    "### Features\n",
+    "- mostly in the shape of I-, H- or Z-profiles.\n",
+    "- same features as steel tube piles, although open profiles cannot be filled with reinforced concrete, and they are less able to retain their shape\n",
+    "\n",
+    "### Application area\n",
+    "- can be coupled and used as water or soil retaining structure\n",
+    "- limited drivability\n",
+    "- suitable to take up tensile forces\n",
+    "\n",
+    "## Vibropile\n",
+    "\n",
+    "```{figure} Images/vibropile.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "Vibropile\n",
+    "```\n",
+    "```{admonition} Information\n",
+    "Length: up to 35 m  \n",
+    "Tip diameter: 273 - 610 mm  \n",
+    "$F_{s;d}$: 3000 kN\n",
+    "```\n",
+    "### Explanation\n",
+    "A steel tube with loose footing plate is driven in the soil. The tube is provided with reinforcement and filled with concrete. Before the concrete hardens the tube is removed either by driving or vibrating. The footing plate remains in the soil. For cast-in-place piles the stresses during driving are absent (as the actual pile is not driven). The concrete strength used is far less than the ones used for prefab piles. In practice shaft stresses of about 12 N/mm2 are used. This type also occurs as combi- pile, where a prefab pile is placed in the casing during casting.\n",
+    "\n",
+    "### Features\n",
+    "- fresh concrete must be sufficiently supported with small deformations\n",
+    "- prestress possible\n",
+    "- not possible on open water\n",
+    "- angle possible\n",
+    "- common failures:\n",
+    " - necking of the shaft due to lack of support or driving to close to another fresh pile. \n",
+    " - rock pockets\n",
+    " - bleeding\n",
+    "\n",
+    "### Application area\n",
+    "- high bearing capacity\n",
+    "- a lot or nuisance due to vibrations and noise\n",
+    "- can take up large bending moments\n",
+    "- stiff load-displacement behaviour\n",
+    "- drivable up to 10 m in compact sand (cone resistance 20 MPa)\n",
+    "- pile length easily adjustable\n",
+    "\n",
+    "## Frankipile\n",
+    "\n",
+    "```{figure} Images/frankipile.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "Frankipile\n",
+    "```\n",
+    "```{admonition} Information\n",
+    "Length: up to 25 m  \n",
+    "Tip diameter: 324 - 610 mm  \n",
+    "$F_{s;d}$: 4000 kN\n",
+    "```\n",
+    "### Explanation\n",
+    "A steel tube is driven in the soil by hitting a cement clog inside the tube. When the desired depth is reached the clog is driven out by holding the pile in place. The shaft can be made out of concrete. \n",
+    "\n",
+    "### Features\n",
+    "- reinforced shaft possible\n",
+    "- maximum diameter footing 2D (actual used dimensions are unknown)\n",
+    "- common failures: same as Vibropiles\n",
+    "\n",
+    "### Application area\n",
+    "- high bearing capacity\n",
+    "- less vibrations that vibropile\n",
+    "- variable pile length\n",
+    "- stiff load-displacement behaviour\n",
+    "- suitable to take up tension forces\n",
+    "- drivable as Vibro-pile\n",
+    "\n",
+    "## Fundexpile (steel tube pile)\n",
+    "\n",
+    "```{figure} Images/fundexpile.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "Fundexpile\n",
+    "```\n",
+    "```{admonition} Information\n",
+    "Length: up to 35 m  \n",
+    "Tube diameter: 380/450/520 mm  \n",
+    "Tip diameter: 450/550/650 mm  \n",
+    "$F_{s;d}$: 1500 kN\n",
+    "```\n",
+    "### Explanation\n",
+    "Fundex and Tubex piles are mostly applied when vibrations and soil relaxation (which causes bearing capacity reduction for nearby piles) is unwanted. Fundexpiles are made by \n",
+    "screwing a steel tube with a loose tip into the soil. When the desired depth is reached the tube is provided with reinforcement and filled with concrete. Before the concrete hardens the tube is removed, also by screwing to avoid vibrations. The tip of the pile remains in the soil. A Fundexpile can be used up to 3 or 4 times in a sand layer.\n",
+    "\n",
+    "### Features\n",
+    "- a steel tube with a loose tip is screwed into the soil by applying an axial compression force and a torsional moment (max. approx. 400 kNm)\n",
+    "- when the desired depth is reached the tube is provided with reinforcement and filled with concrete. The tube is removed vibration-free\n",
+    "- placing under an angle is possible\n",
+    "\n",
+    "### Application area\n",
+    "- relatively high bearing force\n",
+    "- almost vibration-free\n",
+    "- little soil relaxation\n",
+    "- pile tip level easily adjustable\n",
+    "\n",
+    "## Tubexpile (steel tube pile)\n",
+    "\n",
+    "```{figure} Images/tubexpile.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "Tubexpile\n",
+    "```\n",
+    "```{admonition} Information\n",
+    "Length: up to 35 m  \n",
+    "Tube diameter: 380/450/520 mm  \n",
+    "Tip diameter: 450/550/650 mm  \n",
+    "$F_{s;d}$: 1500 kN\n",
+    "```\n",
+    "### Explanation\n",
+    "A steel tube with pile tip is screwed into the soil. When the desired depth is reached the tube is provided with reinforcement and filled with concrete. Both the pile and tip remain in the soil. If necessary, during screwing grout explanation can be injected.\n",
+    "\n",
+    "### Features\n",
+    "- A steel tube with screwtip welded to it is placed (placed identical as Fundexpiles)\n",
+    "- When the desired depth is reached, the tube is filled with concrete and if necessary provided with reinforcement\n",
+    "- during screwing, grout can be injected \n",
+    "- placement under an angle is possible (max 1:1)\n",
+    "- by welding short segments together on site, this pile is suitable for placement in confined spaces (min. working height approx. 2,5 m)\n",
+    "- by injecting grout, the pile can be placed deep in the sand layer (approx. 7 m)\n",
+    "\n",
+    "### Application area\n",
+    "- little vibrations allowed\n",
+    "- large bearing force needed (inject during installation)\n",
+    "- very little soil relaxation\n",
+    "\n",
+    "## Augerpile\n",
+    "\n",
+    "```{figure} Images/augerpile.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "Augerpile\n",
+    "```\n",
+    "```{admonition} Information\n",
+    "Length: up to 20 m  \n",
+    "Tip diameter: 300 - 900 mm  \n",
+    "$F_{s;d}$: 1000 kN\n",
+    "```\n",
+    "### Explanation\n",
+    "Auger piles are mainly applied in light structures where the foundation depth is not too great and no vibrations are allowed. Auger piles are made by screwing a hollow axle with an auger into the soil. If the desired depth is reached, the auger is screwed back and mortar is injected trough the hollow axle. After removal of the auger, a reinforcement cage is placed. Auger piles are not suitable for tension loads.\n",
+    "\n",
+    "## Diaphragm walls\n",
+    "\n",
+    "```{figure} Images/diaphragm_walls.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "Diaphragm walls\n",
+    "```\n",
+    "```{admonition} Information\n",
+    "Length: more than 60 m  \n",
+    "Tip diameter: up to 2400 mm  \n",
+    "$F_{s;d}$: 2-20 MN\n",
+    "```\n",
+    "### Explanation\n",
+    "For drilled piles, as a rule of thumb, the shaft stresses (at the connection between foundation and structure) are assumed to be not greater than 5 N/mm2. This is done to avoid large settlements. However, due to the large cross sections of the diaphragms very high loads are possible. Also tension loads can very well be taken by diaphragm walls."
    ]
   },
   {
