--- a/book/design/foundations/design_guide.ipynb
+++ b/book/design/foundations/design_guide.ipynb
@@ -9,6 +9,12 @@
     "The design guide contains several important issues for foundation design. Before starting the design, first information needs to be obtained. Of course the local soil conditions are necessary, but also the general layout of the structure needs to be known. With this information a sensible choice can be made of the different foundation methods. Finally a design calculation and strength check need to be made. This calculation is not always in the scope of the courses using this document. Mostly only the \n",
     "general design and foundation method are important.\n",
     "\n",
+    "```{figure} Images/foundations.png\n",
+    "---\n",
+    "---\n",
+    "Foundations\n",
+    "```\n",
+    "\n",
     "**Reconnaissance**\n",
     "- building layout\n",
     "- soil conditions\n",
