small typo fixed

--- a/book/design/foundations/foundation_methods_2.ipynb
+++ b/book/design/foundations/foundation_methods_2.ipynb
@@ -22,7 +22,7 @@
     "- difficulties during execution\n",
     "- costs\n",
     "\n",
-    "Each criterion has to be judged for each case separately. Execution aspects and difficulties are especially important. For example: a very weak soil can lack the strength to support the freshly casted concrete of a cast\u0002in-place concrete pile (e.g. a vibro\u0002pile). Another example: a wood pile cannot be driven 5 m into a sand layer without breaking. In the scheme on page fm4 the different pile types are sorted according to their application areas.\n",
+    "Each criterion has to be judged for each case separately. Execution aspects and difficulties are especially important. For example: a very weak soil can lack the strength to support the freshly casted concrete of a cast-in-place concrete pile (e.g. a vibropile). Another example: a wood pile cannot be driven 5 m into a sand layer without breaking. In the scheme on page fm4 the different pile types are sorted according to their application areas.\n",
     "\n",
     "In general, driven piles lead to vibrations and noise in the direct surroundings. Therefore the first selection is usually based on the question whether pile driving is acceptable. This is important because driven foundations have important benefits over non-driven alternatives. For example:\n",
     "- driven systems can be calendered, which makes it possible to verify the assumed soil conditions during driving.\n",
