integrated beams added in steel basics

--- a/book/basics/steel/integrated_beams.ipynb
+++ b/book/basics/steel/integrated_beams.ipynb
@@ -5,7 +5,163 @@
    "metadata": {},
    "source": [
     "# Integrated beams\n",
-    "\n"
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "```{figure} Images/integrated_beams.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "```\n",
+    "Integrated beams, in combination with hollow core slabs, precast concrete planks or composite floors, form a solid floor construction. The beams are completely integrated in the floor, thereby reducing structural height. The welded beams allow for a fast and easy erection. A wide range of different types is available. Examples are the top hat beams (THQ-beams), SFB- beams and IFB-beams.\n",
+    "\n",
+    "### Sources\n",
+    "- [Grunbauer](https://www.grunbauer.nl/): The information on integrated beams has been put together in cooperation with Grunbauer B.V. and Bouwen met Staal.\n",
+    "\n",
+    "## Possible shapes\n",
+    "A wide range of integrated beams is available. Each with is own specific (brand)name. In general, the beams can be divided between open sections and closed sections.\n",
+    "\n",
+    "```{Note}\n",
+    "SFB: Slim Floor Beam  \n",
+    "IFB: Integrated Floor Beam  \n",
+    "ASB: Asymmetric Slimflor Beams  \n",
+    "RHSFB: Rectangular Hollow Section Fabricated Beams  \n",
+    "THQ: Top Hat Q-Beams\n",
+    "```\n",
+    "```{figure} Images/integrated_possible_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Left: SFB and IFB beams (open beam type); middle: THQ, straight and inclined top hat beams (closed beam type); right: RHSFB (closed) and ASB (open) beam type\n",
+    "```\n",
+    "\n",
+    "## Production\n",
+    "\n",
+    "Top hat beams are produced by welding rolled plates (of different thicknesses) together. By adding adding stiffeners inside, the profiles are stiffened.\n",
+    "\n",
+    "SFB beams (Slim Floor Beam) are made by welding a wide steel strip on a standard profile (HEA, HEB en HEM).\n",
+    "\n",
+    "IFB beams (Integrated Floor Beam) are composed of a halved standard profile and a new (wider or smaller) flange. \n",
+    "\n",
+    "```{figure} Images/integrated_production_THQ.png\n",
+    "---\n",
+    "align: left\n",
+    "---\n",
+    "THQ, straight and inclined top hat beams \n",
+    "```\n",
+    "\n",
+    "```{figure} Images/integrated_production_SFB_IFB.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "SFB and IFB beams\n",
+    "```\n",
+    "\n",
+    "## Application examples\n",
+    "\n",
+    "```{figure} Images/integrated_application_HCS.png\n",
+    "---\n",
+    "---\n",
+    "Application of hollow core slabs in  \n",
+    "combination with THQ-beams\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/integrated_application_composite.png\n",
+    "---\n",
+    "align: left\n",
+    "---\n",
+    "Composite floor on ASB-beam\n",
+    "```\n",
+    "```{figure} Images/integrated_application_special_beam_to_column.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "Special beam to column connections  \n",
+    "ensure a fast erection\n",
+    "```\n",
+    "\n",
+    "\n",
+    "## Integrated beams, section tables\n",
+    "\n",
+    "### SFB beams\n",
+    "\n",
+    "```{figure} Images/integrated_SFB.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "```\n",
+    "The tables depicted below are a selection of the available sections. For the complete supply of sections, see: [Grunbauer](https://www.grunbauer.nl/).\n",
+    "\n",
+    "| $h \\ [mm]$ | profile type | $G \\ [kg/m]$ | $b_u \\  [mm]$ | $t \\ [mm]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^4 \\ [mm^3]$ | $W_{y;pl} \\cdot 10^4 \\ [mm^3]$ | $M_{y;u} \\ [kNm]$ | $V_{z;u} \\ [kN]$ |\n",
+    "|--------|--------------|------|-----------|----------|-----------|-----------|-------|------|------|\n",
+    "| 180 | HE180B | 84.2 | 400 | 10 | 6073 | 482 | 599 | 213 | 527 |\n",
+    "| 180 | HE180B | 90.6 | 400 | 12 | 6386 | 488 | 612 | 217 | 527 |\n",
+    "| 200 | HE200B | 94.5 | 400 | 10 | 8616 | 634 | 783 | 278 | 648 |\n",
+    "| 200 | HE200B | 100.9 | 400 | 12 | 9042 | 646 | 799 | 283 | 648 |\n",
+    "| 200 | HE200B | 110.5 | 400 | 15 | 9629 | 655 | 822 | 292 | 648 |\n",
+    "| 250 | HE260A | 112.6 | 450 | 12 | 16169 | 924 | 1107 | 328 | 249 |\n",
+    "| 270 | HE240M | 202.9 | 450 | 12 | 32746 | 1985 | 2513 | 892 | 1626 |\n",
+    "| 270 | HE240M | 213.7 | 450 | 15 | 34546 | 2020 | 2569 | 912 | 1626 |\n",
+    "| 270 | HE240M | 231.7 | 450 | 20 | 37362 | 2076 | 2664 | 946 | 1626 |\n",
+    "\n",
+    "### IFB beams\n",
+    "\n",
+    "```{figure} Images/integrated_IFB.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "```\n",
+    "The tables depicted below are a selection of the available sections. For the complete supply of sections, see: [Grunbauer](https://www.grunbauer.nl/).\n",
+    "\n",
+    "| $h \\ [mm]$ | profile type | $G \\ [kg/m]$ | $b_u \\  [mm]$ | $b_u \\  [mm]$ |$t \\ [mm]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^4 \\ [mm^3]$ | $W_{y;pl} \\cdot 10^4 \\ [mm^3]$ | $M_{y;u} \\ [kNm]$ | $V_{z;u} \\ [kN]$ |\n",
+    "|--------|--------------|------|-----------|----|---------|---------|-------------|-------|------|------|\n",
+    "| 145 | HE300A | 85.2 | 300 | 500 | 10 | 4976 | 607 | 704 | 215 | 250 |\n",
+    "| 150 | HE300C | 150.0 | 300 | 500 | 15 | 8687 | 1022 | 1207 | 428 | 877 |\n",
+    "| 150 | HE300M | 221.2 | 300 | 500 | 25 | 13091 | 1423 | 1837 | 652 | 1142 |\n",
+    "| 175 | HE360A | 97.1 | 300 | 500 | 10 | 8008 | 852 | 955 | 339 | 617 |\n",
+    "| 180 | HE360B | 120.2 | 300 | 500 | 12 | 10284 | 1039 | 1194 | 424 | 775 |\n",
+    "| 180 | HE320M | 204.8 | 300 | 500 | 20 | 16684 | 1620 | 1944 | 690 | 1279 |\n",
+    "| 195 | HE400A | 103.6 | 300 | 500 | 10 | 10370 | 969 | 1108 | 393 | 715 |\n",
+    "| 200 | HE400B | 139.2 | 300 | 500 | 15 | 14915 | 1356 | 1566 | 556 | 886 |\n",
+    "| 200 | HE400M | 230.0 | 300 | 500 | 25 | 24010 | 2052 | 2546 | 904 | 1359 |\n",
+    "| 245 | HE500A | 127.2 | 300 | 500 | 12 | 19880 | 1484 | 1694 | 601 | 927 |\n",
+    "| 250 | HE500B | 155.6 | 300 | 500 | 15 | 25233 | 1855 | 2122 | 753 | 1121 |\n",
+    "| 262 | HE500M | 217.6 | 300 | 500 | 20 | 37400 | 2544 | 3030 | 1076 | 1632 |\n",
+    "| 320 | HE650A | 156.8 | 300 | 500 | 15 | 41378 | 2448 | 2732 | 970 | 1242 |\n",
+    "| 320 | HE650M | 249.6 | 300 | 500 | 25 | 64957 | 3670 | 4310 | 1530 | 1888 |\n",
+    "| 395 | HE800A | 174.4 | 300 | 500 | 15 | 67206 | 3170 | 3635 | 1290 | 1640 |\n",
+    "| 400 | HE800B | 213.6 | 300 | 500 | 20 | 85488 | 4032 | 4574 | 1624 | 1919 |\n",
+    "| 400 | HE800M | 261.6 | 300 | 500 | 25 | 104241 | 4804 | 5581 | 1981 | 2290 |\n",
+    "\n",
+    "\n",
+    "### THQ hoed liggers\n",
+    "\n",
+    "```{figure} Images/integrated_THQ.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "```\n",
+    "The tables depicted below are a selection of the available sections. For the complete supply of sections, see: [Grunbauer](https://www.grunbauer.nl/).\n",
+    "\n",
+    "| $h \\ [mm]$ | $G \\ [kg/m]$ | $t_w \\ [mm]$ | $b_0 \\ [mm]$ | $t_0 \\ [mm]$ | $b_u \\ [mm]$ | $t_u \\ [mm]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^4 \\ [mm^3]$ | $W_{y;pl} \\cdot 10^4 \\ [mm^3]$ | $M_{y;u} \\ [kNm]$ | $V_{z;u} \\ [kN]$ |\n",
+    "|---|----|---|---|----|---|----|---|---|---|--------|--------|\n",
+    "| 150 | 55.8 | 5 | 190 | 12 | 400 | 8 | 3238 | 364 | 445 | 158 | 308 |\n",
+    "| 150 | 63.8 | 5 | 240 | 12 | 450 | 8 | 3813 | 443 | 526 | 187 | 308 |\n",
+    "| 150 | 71.8 | 5 | 290 | 12 | 500 | 8 | 4377 | 527 | 606 | 215 | 308 |\n",
+    "| 180 | 58.2 | 5 | 190 | 12 | 400 | 8 | 4763 | 454 | 552 | 196 | 369 |\n",
+    "| 180 | 66.2 | 5 | 240 | 12 | 450 | 8 | 5592 | 548 | 648 | 230 | 369 |\n",
+    "| 180 | 74.2 | 5 | 290 | 12 | 500 | 8 | 6407 | 647 | 743 | 264 | 369 |\n",
+    "| 200 | 59.8 | 5 | 190 | 12 | 400 | 8 | 5959 | 514 | 626 | 222 | 410 |\n",
+    "| 200 | 67.8 | 5 | 240 | 12 | 450 | 8 | 6984 | 624 | 732 | 260 | 410 |\n",
+    "| 200 | 75.8 | 5 | 290 | 12 | 500 | 8 | 7991 | 733 | 836 | 297 | 410 |\n",
+    "| 265 | 80.2 | 6 | 190 | 15 | 400 | 10 | 13511 | 889 | 1089 | 387 | 652 |\n",
+    "| 265 | 90.2 | 6 | 240 | 15 | 450 | 10 | 15752 | 1072 | 1263 | 448 | 652 |\n",
+    "| 265 | 100.2 | 6 | 290 | 15 | 500 | 10 | 17958 | 1247 | 1433 | 509 | 652 |\n",
+    "| 320 | 109.8 | 8 | 190 | 20 | 400 | 12 | 25790 | 1457 | 1761 | 625 | 1050 |\n",
+    "| 320 | 122.6 | 8 | 240 | 20 | 450 | 12 | 29869 | 1737 | 2020 | 717 | 1050 |\n",
+    "| 320 | 135.4 | 8 | 290 | 20 | 500 | 12 | 33885 | 2029 | 2275 | 808 | 1050 |\n",
+    "| 400 | 150.0 | 10 | 190 | 25 | 400 | 15 | 52566 | 2400 | 2916 | 1035 | 1640 |\n",
+    "| 400 | 166.0 | 10 | 240 | 25 | 450 | 15 | 60501 | 2840 | 3319 | 1178 | 1640 |\n",
+    "| 400 | 182.0 | 10 | 290 | 25 | 500 | 15 | 68329 | 3269 | 3715 | 1319 | 1640 |"
    ]
   },
   {
