--- a/book/basics/steel/castellated_beams.ipynb
+++ b/book/basics/steel/castellated_beams.ipynb
@@ -6,7 +6,257 @@
    "source": [
     "# Castellated beams\n",
     "\n",
-    "\n"
+    "## Introduction\n",
+    "\n",
+    "```{figure} Images/castellated_beams_2.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "```\n",
+    "Castellated beams are made by cutting standard hot rolled sections lengthwise along a ‘toothed’ line. After cutting, both parts are shifted with respect to each other, placing the ‘teeth’ upon each other. The two halves are welded together. Between the welded connections the characteristic hexagonal holes appear. The increased height is very beneficial for the stiffness of the beam. The bending strength is not increased very much. The shear capacity of the castellated beam is relatively low. If necessary, the hexagonal hole nearest to the supports can be filled up with a plate to locally increase the shear capacity. For these reasons castellated beams are very suitable for long spans with relatively low loads. To prevent local buckling of the web (if necessary, and \n",
+    "where needed) local stiffeners can be added.\n",
+    "\n",
+    "### Sources\n",
+    "- [Grunbauer](https://www.grunbauer.nl/): The information on integrated beams has been put together in cooperation with Grunbauer B.V. and Bouwen met Staal.\n",
+    "\n",
+    "## Possible shapes\n",
+    "\n",
+    "```{figure} Images/castellated_possible_shapes_1.png\n",
+    "---\n",
+    "---\n",
+    "Left: standard castellated beam (edges will be trimmed later); middle: beams with variable height are also possible; right: curved castellated beams\n",
+    "```\n",
+    "```{figure} Images/castellated_possible_shapes_2.png\n",
+    "---\n",
+    "---\n",
+    "Left: cellular beams; Right production of cellular beams will cause some material loss\n",
+    "```\n",
+    "\n",
+    "## Production method\n",
+    "\n",
+    "### Production method 1\n",
+    "```{figure} Images/castellated_production_method_1.png\n",
+    "---\n",
+    "---\n",
+    "Left: cutting of the profile; middle: shifting of the two halves; right: welding of the new section\n",
+    "```\n",
+    "### Production method 2\n",
+    "```{figure} Images/castellated_production_method_2.png\n",
+    "---\n",
+    "---\n",
+    "Left: cutting of the profile; middle: adding plates between the two halves; right: welding together the two halves and plates\n",
+    "```\n",
+    "\n",
+    "## Application examples\n",
+    "```{figure} Images/castellated_application_1.png\n",
+    "---\n",
+    "---\n",
+    "Left: NS station Amsterdam RAI; right: castellated beams are used as facade support\n",
+    "```\n",
+    "```{figure} Images/castellated_application_2.png\n",
+    "---\n",
+    "---\n",
+    "Left: Transeuro Nijman, Rotterdam, with bracing in the facade; right: cross section of the building\n",
+    "```\n",
+    "## Castellated beams, section tables\n",
+    "\n",
+    "### Castellated beams based on IPE 180, IPE 240, IPE 300, IPE 360\n",
+    "The tables depicted below are a selection of the available sections. For the complete supply of sections, see: [Grunbauer](https://www.grunbauer.nl/).\n",
+    "```{figure} Images/castellated_section_profile.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "```\n",
+    "\n",
+    "#### Based on IPE180\n",
+    "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
+    "|------|--------|------|------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
+    "| 180* | 19.2   | 90   | 0    | 0    | 24     | 1317   | 146    | 83     | 24     | 1317   | 146    | 83     |\n",
+    "| 240  | 19.2   | 59.9 | 120.2| 0    | 27     | 2543   | 212    | 122    | 21     | 2466   | 205    | 112    |\n",
+    "| 270  | 19.2   | 45   | 180  | 0    | 29     | 3332   | 247    | 142    | 19     | 3074   | 228    | 121    |\n",
+    "| 300  | 19.2   | 30   | 240.1| 0    | 30     | 4254   | 284    | 165    | 18     | 3643   | 243    | 126    |\n",
+    "| 370  | 20.6   | 45   | 280  | 100  | 34     | 6943   | 375    | 221    | 19     | 5973   | 323    | 169    |\n",
+    "| 420  | 21.3   | 45   | 330  | 150  | 37     | 9370   | 446    | 265    | 19     | 7783   | 371    | 193    |\n",
+    "\n",
+    "```{admonition} *Properties IPE180\n",
+    "$h = 180 \\ mm$  \n",
+    "$b = 91 \\ mm$  \n",
+    "$d = 5.3 \\ mm$  \n",
+    "$I_z = 101 \\cdot 10^4 \\ mm^4$   \n",
+    "$t = 8 \\ mm$  \n",
+    "$r = 9 \\ mm$  \n",
+    "$W_z = 22 \\cdot 10^3 \\ mm^3$\n",
+    "```\n",
+    "\n",
+    "#### Based on IPE240\n",
+    "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
+    "|------|--------|------|------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
+    "| 240* | 31.3   | 120  | 0    | 0    | 39     | 3892   | 324    | 183    | 39     | 3892   | 324    | 183    |\n",
+    "| 300  | 31.3   | 90   | 120  | 0    | 43     | 6455   | 430    | 245    | 35     | 6366   | 424    | 234    |\n",
+    "| 360  | 31.3   | 60   | 240  | 0    | 47     | 9789   | 544    | 312    | 32     | 9075   | 504    | 267    |\n",
+    "| 400  | 31.3   | 40   | 320.2| 0    | 49     | 12479  | 624    | 360    | 29     | 10783  | 539    | 280    |\n",
+    "| 460  | 33     | 60   | 340  | 100  | 53     | 17241  | 750    | 436    | 32     | 15210  | 661    | 346    |\n",
+    "| 510  | 33.8   | 60   | 390  | 150  | 56     | 21937  | 860    | 504    | 32     | 18872  | 740    | 386    |\n",
+    "\n",
+    "```{admonition} *Properties IPE240\n",
+    "$h = 240 \\ mm$  \n",
+    "$b = 120 \\ mm$  \n",
+    "$d = 6.2 \\ mm$  \n",
+    "$I_z = 284 \\cdot 10^4 \\ mm^4$   \n",
+    "$t = 9.8 \\ mm$  \n",
+    "$r = 15 \\ mm$  \n",
+    "$W_z = 47 \\cdot 10^3 \\ mm^3$\n",
+    "```\n",
+    "\n",
+    "#### Based on IPE300\n",
+    "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
+    "|------|--------|------|------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
+    "| 300* | 43     | 150  | 0    | 0    | 54     | 8356   | 557    | 314    | 54     | 8356   | 557    | 314    |\n",
+    "| 375  | 43     | 112.5| 150  | 0    | 59     | 13850  | 739    | 420    | 48     | 13650  | 728    | 400    |\n",
+    "| 450  | 43     | 75   | 300  | 0    | 64     | 21008  | 934    | 536    | 43     | 19411  | 863    | 456    |\n",
+    "| 500  | 43     | 50   | 400.2| 0    | 68     | 26790  | 1071   | 619    | 40     | 22998  | 920    | 477    |\n",
+    "| 550  | 44.9   | 75   | 400  | 100  | 72     | 33398  | 1214   | 706    | 43     | 29611  | 1077   | 564    |\n",
+    "| 600  | 45.8   | 75   | 450  | 150  | 75     | 40912  | 1364   | 798    | 43     | 35520  | 1184   | 618    |\n",
+    "\n",
+    "\n",
+    "```{admonition} *Properties IPE300\n",
+    "$h = 300 \\ mm$  \n",
+    "$b = 150 \\ mm$  \n",
+    "$d = 7.1 \\ mm$  \n",
+    "$I_z = 603 \\cdot 10^4 \\ mm^4$   \n",
+    "$t = 10.7 \\ mm$  \n",
+    "$r = 15 \\ mm$  \n",
+    "$W_z = 80 \\cdot 10^3 \\ mm^3$\n",
+    "```\n",
+    "\n",
+    "#### Based on IPE360\n",
+    "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
+    "|------|--------|------|------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
+    "| 360* | 58.2   | 180  | 0    | 0    | 73     | 16266  | 904    | 510    | 73     | 16266  | 904    | 510    |\n",
+    "| 480  | 58.2   | 119.9| 240.5| 0    | 82     | 31265  | 1302   | 743    | 63     | 30338  | 1263   | 685    |\n",
+    "| 540  | 58.2   | 90   | 360  | 0    | 87     | 40890  | 1514   | 869    | 58     | 37780  | 1399   | 740    |\n",
+    "| 640  | 60.3   | 90   | 460  | 100  | 95     | 60520  | 1891   | 1097   | 58     | 54031  | 1688   | 885    |\n",
+    "| 690  | 61.4   | 90   | 510  | 150  | 99     | 72094  | 2090   | 1218   | 58     | 63251  | 1833   | 958    |\n",
+    "| 740  | 62.5   | 90   | 560  | 200  | 103    | 84907  | 2295   | 1345   | 58     | 73199  | 1978   | 1031   |\n",
+    "\n",
+    "\n",
+    "```{admonition} *Properties IPE360\n",
+    "$h = 360 \\ mm$  \n",
+    "$b = 170 \\ mm$  \n",
+    "$d = 8 \\ mm$  \n",
+    "$I_z = 1042 \\cdot 10^4 \\ mm^4$   \n",
+    "$t = 12.7 \\ mm$  \n",
+    "$r = 18 \\ mm$  \n",
+    "$W_z = 123 \\cdot 10^3 \\ mm^3$\n",
+    "```\n",
+    "\n",
+    "### Castellated beams based on HEA 180, HEA 240, HEA 300, HEA 360, HEA 400\n",
+    "The tables depicted below are a selection of the available sections. For the complete supply of sections, see: [Grunbauer](https://www.grunbauer.nl/).\n",
+    "```{figure} Images/castellated_section_profile.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "```\n",
+    "\n",
+    "#### Based on HEA180\n",
+    "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
+    "|------|--------|------|------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
+    "| 171* | 36.2   | 85.5 | 0    | 0    | 45     | 2510   | 294    | 162    | 45     | 2510   | 294    | 162    |\n",
+    "| 215  | 36.2   | 63.4 | 88.2 | 0    | 48     | 4168   | 388    | 214    | 43     | 4134   | 384    | 208    |\n",
+    "| 257  | 36.2   | 42.8 | 171  | 0    | 50     | 6146   | 479    | 265    | 40     | 5896   | 460    | 243    |\n",
+    "| 285  | 36.2   | 28.5 | 228.1| 0    | 52     | 7761   | 545    | 301    | 38     | 7167   | 503    | 262    |\n",
+    "| 357  | 37.8   | 42.8 | 271  | 100  | 56     | 12748  | 715    | 398    | 40     | 11753  | 659    | 343    |\n",
+    "| 407  | 38.6   | 42.8 | 321  | 150  | 59     | 17088  | 841    | 470    | 40     | 15434  | 759    | 393    |\n",
+    "\n",
+    "```{admonition} *Properties HEA180\n",
+    "$h = 171 \\ mm$  \n",
+    "$b = 180 \\ mm$  \n",
+    "$d = 6 \\ mm$  \n",
+    "$I_z = 925 \\cdot 10^4 \\ mm^4$   \n",
+    "$t = 9.5 \\ mm$  \n",
+    "$r = 15 \\ mm$  \n",
+    "$W_z = 103 \\cdot 10^3 \\ mm^3$\n",
+    "```\n",
+    "\n",
+    "#### Based on HEA240\n",
+    "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
+    "|------|--------|------|-------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
+    "| 230* | 61.5   | 115  | 0     | 0    | 77     | 7763   | 675    | 372    | 77     | 7763   | 675    | 372    |\n",
+    "| 290  | 61.5   | 85   | 120.1 | 0    | 81     | 12939  | 892    | 491    | 72     | 12831  | 885    | 477    |\n",
+    "| 345  | 61.5   | 57.5 | 230   | 0    | 85     | 18962  | 1099   | 606    | 68     | 18202  | 1055   | 556    |\n",
+    "| 385  | 61.5   | 37.5 | 310   | 0    | 88     | 24155  | 1255   | 693    | 65     | 22292  | 1158   | 603    |\n",
+    "| 445  | 63.5   | 57.5 | 330   | 100  | 93     | 33273  | 1495   | 829    | 68     | 31027  | 1394   | 727    |\n",
+    "| 495  | 64.5   | 57.5 | 380   | 150  | 97     | 42148  | 1703   | 947    | 68     | 38719  | 1564   | 812    |\n",
+    "\n",
+    "```{admonition} *Properties HEA240\n",
+    "$h = 230 \\ mm$  \n",
+    "$b = 240 \\ mm$  \n",
+    "$d = 7.5 \\ mm$  \n",
+    "$I_z = 2770 \\cdot 10^4 \\ mm^4$   \n",
+    "$t = 12 \\ mm$  \n",
+    "$r = 21 \\ mm$  \n",
+    "$W_z = 231 \\cdot 10^3 \\ mm^3$\n",
+    "```\n",
+    "\n",
+    "#### Based on HEA300\n",
+    "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
+    "|------|--------|-------|-------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
+    "| 310* | 99.5   | 155   | 0     | 0    | 124    | 22929  | 1479   | 814    | 124    | 22929  | 1479   | 814    |\n",
+    "| 390  | 99.5   | 114.9 | 160.6 | 0    | 132    | 38044  | 1950   | 1071   | 117    | 37733  | 1934   | 1042   |\n",
+    "| 465  | 99.5   | 77.5  | 310   | 0    | 138    | 55913  | 2405   | 1323   | 110    | 53679  | 2309   | 1215   |\n",
+    "| 520  | 99.5   | 49.9  | 420.4 | 0    | 143    | 71579  | 2752   | 1517   | 105    | 66008  | 2538   | 1318   |\n",
+    "| 565  | 101.9  | 77.5  | 410   | 100  | 147    | 85906  | 3041   | 1680   | 110    | 80737  | 2858   | 1491   |\n",
+    "| 615  | 103.1  | 77.5  | 460   | 150  | 152    | 103637 | 3370   | 1867   | 110    | 96337  | 3133   | 1629   |\n",
+    "\n",
+    "```{admonition} *Properties HEA300\n",
+    "$h = 310 \\ mm$  \n",
+    "$b = 300 \\ mm$  \n",
+    "$d = 9 \\ mm$  \n",
+    "$I_z = 6988 \\cdot 10^4 \\ mm^4$   \n",
+    "$t = 15.5 \\ mm$  \n",
+    "$r = 27 \\ mm$  \n",
+    "$W_z = 466 \\cdot 10^3 \\ mm^3$\n",
+    "```\n",
+    "\n",
+    "#### Based on HEA360\n",
+    "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
+    "|------|--------|-------|-------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
+    "| 350* | 114.2  | 175   | 0     | 0    | 143    | 33090  | 1891   | 1044   | 143    | 33090  | 1891   | 1044   |\n",
+    "| 440  | 114.2  | 129.8 | 180.6 | 0    | 152    | 54920  | 2495   | 1377   | 134    | 54429  | 2472   | 1336   |\n",
+    "| 525  | 114.2  | 87.5  | 350   | 0    | 160    | 81015  | 3086   | 1707   | 125    | 77442  | 2950   | 1554   |\n",
+    "| 585  | 114.2  | 57.4  | 470.4 | 0    | 166    | 103038 | 3521   | 1953   | 119    | 94364  | 3225   | 1676   |\n",
+    "| 625  | 116.9  | 87.5  | 450   | 100  | 170    | 119246 | 3816   | 2120   | 125    | 111652 | 3573   | 1867   |\n",
+    "| 675  | 118.2  | 87.5  | 500   | 150  | 175    | 141523 | 4193   | 2336   | 125    | 131106 | 3885   | 2024   |\n",
+    "\n",
+    "```{admonition} *Properties HEA360\n",
+    "$h = 350 \\ mm$  \n",
+    "$b = 300 \\ mm$  \n",
+    "$d = 10 \\ mm$  \n",
+    "$I_z = 7889 \\cdot 10^4 \\ mm^4$   \n",
+    "$t = 17.5 \\ mm$  \n",
+    "$r = 27 \\ mm$  \n",
+    "$W_z = 526 \\cdot 10^3 \\ mm^3$\n",
+    "```\n",
+    "\n",
+    "#### Based on HEA400\n",
+    "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
+    "|------|--------|--------|--------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
+    "| 440* | 142.4  | 220    | 0      | 0    | 178    | 63722  | 2896   | 1608   | 178    | 63722  | 2896   | 1608   |\n",
+    "| 550  | 142.4  | 165    | 220    | 0    | 191    | 104609 | 3804   | 2115   | 165    | 103589 | 3767   | 2045   |\n",
+    "| 660  | 142.4  | 110    | 440    | 0    | 203    | 157032 | 4759   | 2657   | 153    | 148869 | 4511   | 2378   |\n",
+    "| 735  | 142.4  | 72.4   | 590.5  | 0    | 212    | 199928 | 5438   | 3047   | 144    | 180198 | 4902   | 2546   |\n",
+    "| 760  | 145.5  | 110    | 540    | 100  | 215    | 215345 | 5667   | 3179   | 153    | 200255 | 5270   | 2760   |\n",
+    "| 810  | 147    | 110    | 590    | 150  | 221    | 248493 | 6136   | 3451   | 153    | 228811 | 5650   | 2951   |\n",
+    "\n",
+    "```{admonition} *Properties HEA400\n",
+    "$h = 390 \\ mm$  \n",
+    "$b = 300 \\ mm$  \n",
+    "$d = 11 \\ mm$  \n",
+    "$I_z = 8566 \\cdot 10^4 \\ mm^4$   \n",
+    "$t = 19 \\ mm$  \n",
+    "$r = 27 \\ mm$  \n",
+    "$W_z = 8561 \\cdot 10^3 \\ mm^3$\n",
+    "```"
    ]
   },
   {
