basics steel sections added some tables and headers

--- a/book/basics/steel/section_tables.ipynb
+++ b/book/basics/steel/section_tables.ipynb
@@ -6,7 +6,121 @@
    "source": [
     "# Section tables\n",
     "\n",
-    "\n"
+    "## IPE sections (IPE 100 - IPE 300)\n",
+    "```{figure} Images/IPE.png\n",
+    "---\n",
+    "---\n",
+    "IPE axes\n",
+    "```\n",
+    "\n",
+    "## IPE sections (IPE 330 - IPE 750)\n",
+    "```{figure} Images/IPE.png\n",
+    "---\n",
+    "---\n",
+    "IPE axes\n",
+    "```\n",
+    "\n",
+    "## HEA/HEB/HEM sections (HEA 100 - HEA 340)\n",
+    "```{figure} Images/HEA_HEB_HEM.png\n",
+    "---\n",
+    "---\n",
+    "HEA/HEB/HEM axes\n",
+    "```\n",
+    "\n",
+    "## HEA/HEB/HEM sections (HEA 360 - HEA 1000)\n",
+    "```{figure} Images/HEA_HEB_HEM.png\n",
+    "---\n",
+    "---\n",
+    "HEA/HEB/HEM axes\n",
+    "```\n",
+    "\n",
+    "## CHS hollow sections (hot rolled)\n",
+    "```{figure} Images/CHS.png\n",
+    "---\n",
+    "---\n",
+    "CHS axes\n",
+    "```\n",
+    "\n",
+    "## RHS hollow sections 40 x 40 tot 180 x 180 (hot rolled, square)\n",
+    "```{figure} Images/RHS.png\n",
+    "---\n",
+    "---\n",
+    "RHS axes\n",
+    "```\n",
+    "\n",
+    "## RHS hollow sections 200 x 200 - 400 x 400 (continued)\n",
+    "```{figure} Images/RHS.png\n",
+    "---\n",
+    "---\n",
+    "RHS axes\n",
+    "```\n",
+    "\n",
+    "## RHS hollow sections 50 x 30 - 100 x 60 (hot rolled, non-square)\n",
+    "```{figure} Images/RHS.png\n",
+    "---\n",
+    "---\n",
+    "RHS axes\n",
+    "```\n",
+    "\n",
+    "## RHS hollow sections 120 x 60 tot 500 x 300 (continued)\n",
+    "\n",
+    "\n",
+    "```{figure} Images/RHS.png\n",
+    "---\n",
+    "---\n",
+    "RHS axes\n",
+    "```\n",
+    "\n",
+    "## UNP sections\n",
+    "```{figure} Images/UNP.png\n",
+    "---\n",
+    "---\n",
+    "UNP axes\n",
+    "```\n",
+    "\n",
+    "| $h$ x $b$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $S_s \\ [mm]$ | $G \\ [kg/m]$ | $A_s \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$   | $I_z \\cdot 10^4 \\ [mm^4]$  | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ |\n",
+    "|----------|--------|-------|-------|-----------|---------|----------|----------|------------|\n",
+    "| 80x45    | 6      | 19.4  | 8.7   | 11.0      | 105.9   | 19.36    | 26.5     | 6.36       |\n",
+    "| 100x50   | 6      | 20.3  | 10.6  | 13.5      | 205.3   | 29.15    | 41.2     | 8.49       |\n",
+    "| 120x55   | 7      | 22.2  | 13.4  | 17.0      | 364.3   | 43.06    | 60.7     | 11.1       |\n",
+    "| 140x60   | 7      | 23.9  | 16.0  | 20.4      | 604.8   | 62.48    | 86.4     | 14.8       |\n",
+    "| 150x65   | 7.5    | 25.3  | 18.8  | 24.0      | 924.7   | 85.04    | 116      | 18.3       |\n",
+    "| 180x70   | 8      | 26.8  | 22.0  | 28.0      | 1350    | 113.5    | 150      | 22.4       |\n",
+    "| 200x75   | 8.5    | 28.2  | 25.3  | 32.2      | 1910    | 147.7    | 191      | 27         |\n",
+    "| 220x80   | 9      | 30.3  | 29.4  | 37.4      | 2690    | 195.5    | 245      | 33.6       |\n",
+    "| 240x85   | 9.5    | 31.8  | 33.2  | 42.3      | 3600    | 247.4    | 300      | 39.6       |\n",
+    "| 260x90   | 10     | 33.9  | 37.9  | 48.3      | 4820    | 317.3    | 371      | 47.7       |\n",
+    "| 280x95   | 10     | 35.6  | 41.8  | 53.4      | 6280    | 398.2    | 448      | 57.2       |\n",
+    "| 300x100  | 10     | 37.3  | 46.2  | 58.8      | 8030    | 493.1    | 535      | 67.8       |\n",
+    "| 320x100  | 14     | 43.0  | 59.5  | 75.8      | 10870   | 596.6    | 679      | 80.6       |\n",
+    "| 350x100  | 14     | 40.7  | 60.6  | 77.3      | 12840   | 570.9    | 734      | 75         |\n",
+    "| 380x102  | 13.5   | 40.3  | 63.1  | 80.4      | 15760   | 615.2    | 829      | 78.7       |\n",
+    "| 400x110  | 14     | 44.1  | 71.8  | 91.5      | 20350   | 851.0    | 1020     | 102        |\n",
+    "\n",
+    "## Corrugated sheet-sections\n",
+    "| Shape | $h \\ [mm]$ | $t \\ [mm]$ | $\\sigma \\ [N/mm^2]$ | $I_y \\ [mm^4]$ | $W_{y;el} \\cdot 10^4 [mm^4]$ |\n",
+    "|-----|-------|------------|------|--------------|------|\n",
+    "| ![css_40](Images/css_40.png) | 40    | 0.88       | 94   | 30     | 9.1   |\n",
+    "| |       | 1.00       | 107  | 33     | 10.4  |\n",
+    "| ![css_70](Images/css_70.png) | 70    | 0.88       | 107  | 96     | 22.7  |\n",
+    "| |       | 1.00       | 122  | 110    | 26.6  |\n",
+    "| ![css_96](Images/css_96.png) | 96    | 0.88       | 121  | 195    | 21.7  |\n",
+    "| |       | 1.00       | 138  | 223    | 24.8  |\n",
+    "| ![css_106](Images/css_106.png) | 106   | 0.88       | 115  | 213    | 26.9  |\n",
+    "| |       | 1.00       | 130  | 243    | 31.8  |\n",
+    "| ![css_120](Images/css_120.png) | 120   | 0.88       | 136  | 320    | 43.0  |\n",
+    "| |       | 1.00       | 154  | 365    | 55.0  |\n",
+    "\n",
+    "\n",
+    "```{Note}\n",
+    "The sections have variable width. Section moduli and moments of inertia are given per meter width\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/corrugated_sheets_sections.png\n",
+    "---\n",
+    "---\n",
+    "Corrugated sheet-sections\n",
+    "```"
    ]
   },
   {
@@ -31,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
