RHS 200x200 tot 400x400 added

--- a/book/basics/steel/section_tables.ipynb
+++ b/book/basics/steel/section_tables.ipynb
@@ -55,6 +55,34 @@
     "RHS axes\n",
     "```\n",
     "\n",
+    "| $h$ x $b$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y = I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} = W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y = i_z \\ [mm]$ |\n",
+    "|---------|------|--------|-------|-------|-------|------|\n",
+    "| 200x200 | 5.0  | 30.4   | 38.7  | 2450  | 245   | 79.5 |\n",
+    "|         | 6.3  | 38.0   | 48.4  | 3010  | 301   | 78.9 |\n",
+    "|         | 8.0  | 47.7   | 60.8  | 3710  | 371   | 78.1 |\n",
+    "|         | 10.0 | 58.8   | 74.9  | 4470  | 447   | 77.2 |\n",
+    "|         | 12.5 | 72.3   | 92.1  | 5340  | 534   | 76.1 |\n",
+    "|         | 16.0 | 90.3   | 115   | 6390  | 639   | 74.6 |\n",
+    "| 250x250 | 6.3  | 47.9   | 61.0  | 6010  | 481   | 99.3 |\n",
+    "|         | 8.0  | 60.3   | 76.8  | 7460  | 596   | 98.6 |\n",
+    "|         | 10.0 | 74.5   | 94.9  | 9060  | 724   | 97.7 |\n",
+    "|         | 12.5 | 91.9   | 117   | 10900 | 873   | 96.6 |\n",
+    "|         | 16.0 | 115    | 147   | 13300 | 1060  | 95.0 |\n",
+    "| 300x300 | 6.3  | 57.8   | 73.6  | 10500 | 703   | 120.0|\n",
+    "|         | 8.0  | 72.8   | 92.8  | 13100 | 875   | 119.0|\n",
+    "|         | 10.0 | 90.2   | 115   | 16000 | 1070  | 118.0|\n",
+    "|         | 12.5 | 112    | 142   | 19400 | 1300  | 117.0|\n",
+    "|         | 16.0 | 141    | 179   | 23900 | 1590  | 115.0|\n",
+    "| 350x350 | 8.0  | 85.4   | 109   | 21100 | 1210  | 139.0|\n",
+    "|         | 10.0 | 106    | 135   | 25900 | 1480  | 139.0|\n",
+    "|         | 12.5 | 131    | 167   | 31500 | 1800  | 137.0|\n",
+    "|         | 16.0 | 166    | 211   | 38900 | 2230  | 136.0|\n",
+    "| 400x400 | 10.0 | 122    | 155   | 39100 | 1960  | 159.0|\n",
+    "|         | 12.5 | 151    | 192   | 47800 | 2390  | 158.0|\n",
+    "|         | 16.0 | 191    | 243   | 59300 | 2970  | 156.0|\n",
+    "|         | 20.0 | 235    | 300   | 71500 | 3580  | 154.0|\n",
+    "\n",
+    "\n",
     "## RHS hollow sections 50 x 30 - 100 x 60 (hot rolled, non-square)\n",
     "```{figure} Images/RHS.png\n",
     "---\n",
